tests/negative/class/class_private_super_access.tx
// EXPECTED: COMPILE_ERROR
// Description: Subclasses must not access private parent methods through super.

class VaultBase {
    private secret(): int {
        return 7;
    }
}

class VaultChild extends VaultBase {
    reveal(): int {
        return super.secret();
    }
}

function main() {
    let vault = new VaultChild();
    print(vault.reveal());
}
